test/libsolidity/syntaxTests/contractBaseLocation/abstract_contract.sol
abstract contract C layout at 0x123 {
}
// ----
// TypeError 7587: (20-35): Storage base location cannot be specified for abstract contracts or libraries
